# instances-finder

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.forgejo/: release-notes.md
.forgejo/workflows/: ci.yml  release.yml
.githooks/: commit-msg  pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml  commit-message.yml  dependabot-auto-merge.yml  release-draft.yml  release.yml
docs/: poc-flutter-rust.md
poc/flutter_rust/rustlib/: Cargo.toml
scripts/: check-forbidden-unicode.sh  check-no-nbhyphen.sh  cross-win-build.sh  doctor.sh  gen-i18n-keys.mjs  gen-i18n-keys.test.mjs  gh-create-release.sh  release-tag.sh  update-workflow-action-pins.sh  validate-commit-msg.sh  win-portable-zip.sh
src/: App.tsx  i18n.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: api.rs  main.rs
src/__tests__/: format.test.ts  open-external.test.ts
src/components/: AppShell.tsx  CheckboxList.tsx  Header.tsx  LiveRegion.tsx  PreferencesModal.tsx  Results.tsx  SidebarNav.tsx  SkipLink.tsx  StatusBar.tsx  Titlebar.tsx  TokenSetup.tsx  Wizard.tsx
src/lib/: api.ts  format.ts  languages.ts  open-external.ts  score.ts
src/locales/: en.json  fr.json  i18n-keys.d.ts
src/mocks/: instances.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+1 files in other folders)
