[package]
name = "instances-finder"
version = "0.1.0"
description = "Accessible Mastodon instances finder"
authors = ["Patrick Zajda <patrick@zajda.fr>"]
license = "MIT"
homepage = "https://github.com/Nardol/instances-finder"
repository = "https://github.com/Nardol/instances-finder"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }
png = "0.17"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
keyring = "2"
instances-social = "2"
tauri = { version = "1.5", features = [ "clipboard-write-text", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
