[package]
name = "instances-finder"
version = "0.1.0"
description = "Accessible Mastodon instances finder"
authors = ["Patrick Zajda <patrick@zajda.fr>"]
license = "MIT"
homepage = "https://github.com/Nardol/instances-finder"
repository = "https://github.com/Nardol/instances-finder"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
png = "0.18"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = { version = "3", features = ["sync-secret-service", "windows-native", "apple-native"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
